--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,19 @@
 
     <dependencies>
         <dependency>
+
+            <groupId>org</groupId>
+
+            <artifactId>jnbt</artifactId>
+
+            <version>1.1</version>
+
+            <scope>system</scope>
+
+            <systemPath>${basedir}/lib/jnbt-1.1.jar</systemPath>
+
+        </dependency>
+        <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.19-R0.1-SNAPSHOT</version>
